fix: fix missing padding and lines (#416)
* fix: added paddings

* fix: paddings and lines

* fix: added on all pages lines and  paddings

* fix: fixed (review)

--- a/src/components/pages/personal-teacher-page/personal-teacher-card/PersonalTeacherCard.module.scss
+++ b/src/components/pages/personal-teacher-page/personal-teacher-card/PersonalTeacherCard.module.scss
@@ -8,14 +8,16 @@
   grid-template-columns: auto auto minmax(296px, 1fr);
   grid-template-rows: auto  1fr   auto auto auto;
 }
+
 .contacts-hidden{
   display: flex;
+  position: relative;
   flex-direction: column;
   gap: 16px;
-  border-left: solid $white 2px;
   width:fit-content;
   height: fit-content;
   padding-right: 5%;
+  padding-top: 12px;
   padding-left: 42px;
   grid-column-start: 3;
   grid-column-end: 4;
@@ -26,15 +28,33 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  border-left: solid $white 2px;
   width:fit-content;
   height: fit-content;
-  //padding-right: 142px;
   padding-left: 42px;
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 1;
   grid-row-end: 4;
+}
+
+.contacts-item{
+  &:only-child::after {
+    top: 1px;
+    height: 120px;
+  }
+  &:not(:only-child)::after {
+    top: 0;
+    height: 150%;
+  }
+  &::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 2px;
+    background-color: white;
+  }
 }
 
 .photo{
