--- a/src/components/pages/personal-teacher-subject-page/personal-teacher-subject-card/PersonalTeacherSubjectCard.module.scss
+++ b/src/components/pages/personal-teacher-subject-page/personal-teacher-subject-card/PersonalTeacherSubjectCard.module.scss
@@ -8,16 +8,19 @@
   width: 100%;
   grid-template-columns: auto auto minmax(296px, 1fr);
   grid-template-rows: auto  1fr  1fr;
+
 }
 .contacts-hidden{
   display: flex;
   flex-direction: column;
+  position: relative;
   gap: 16px;
-  border-left: solid $white 2px;
+
   width:fit-content;
   height: fit-content;
   padding-right: 5%;
   padding-left: 42px;
+  padding-top: 12px;
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 1;
@@ -27,15 +30,33 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  border-left: solid $white 2px;
   width:fit-content;
   height: fit-content;
-  //padding-right: 142px;
   padding-left: 42px;
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 1;
   grid-row-end: 4;
+}
+
+.contacts-item{
+  &:only-child::after {
+    top: 1px;
+    height: 120px;
+  }
+  &:not(:only-child)::after {
+    top: 0;
+    height: 150%;
+  }
+  &::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 2px;
+    background-color: white;
+  }
 }
 
 .photo{
@@ -101,6 +122,7 @@
   flex-direction: column;
   align-items: flex-start;
   overflow-wrap: anywhere;
+  padding-right: 42px;
   h5{
     @include h5--bold;
   }
@@ -230,6 +252,7 @@
     h5{
       @include body-secondary--bold;
     }
+    padding-right: 0;
     padding-bottom: 8px;
     padding-top: unset;
   }
